--- a/templates/security/reset_password.html.twig
+++ b/templates/security/reset_password.html.twig
@@ -1,9 +1,10 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}password reset{% endblock %}
+{#{% block title %}password reset{% endblock %}#}
 
 {% block body %}
     {% include 'navbar.html.twig' %}
+    <div class="container" style="margin-top: 5%" >
     <form method="post" action="{{ path('reset_password_action') }}">
         {% if app.session.flashBag.has('success') %}
             <div class="alert alert-error fade in" role="alert">
@@ -19,8 +20,6 @@
                 {% endfor %}
             </div>
         {% endif %}
-
-        <h1 class="h3 mb-3 font-weight-normal">password</h1>
 
         <label for="CurrentPassword">Password</label>
         <input type="password" name="CurrentPassword" id="CurrentPassword" class="form-control" autocomplete="current-password" required>
@@ -38,4 +37,5 @@
             Update
         </button>
     </form>
+    </div>
 {% endblock %}
