--- a/templates/security/reset_password.html.twig
+++ b/templates/security/reset_password.html.twig
@@ -21,20 +21,20 @@
             </div>
         {% endif %}
 
-        <label for="CurrentPassword">Password</label>
+        <label for="CurrentPassword">{% trans into language %}Password{% endtrans %}</label>
         <input type="password" name="CurrentPassword" id="CurrentPassword" class="form-control" autocomplete="current-password" required>
 
-        <label for="newPassword">newPassword</label>
+        <label for="newPassword"{% trans into language %}>newPassword{% endtrans %}</label>
         <input type="password" name="newPassword" id="newPassword" class="form-control" autocomplete="current-password" required>
 
 
-        <label for="confirmPassword">confirmPassword</label>
+        <label for="confirmPassword">{% trans into language %}confirmPassword{% endtrans %}</label>
         <input type="password" name="confirmPassword" id="confirmPassword" class="form-control" autocomplete="current-password" required>
 
         <input type="hidden" name="_csrf_token"
                value="{{ csrf_token('authenticate') }}">
         <button class="btn btn-lg btn-primary" type="submit">
-            Update
+            {% trans into language %} Update{% endtrans %}
         </button>
     </form>
     </div>
