--- a/templates/security/reset_password.html.twig
+++ b/templates/security/reset_password.html.twig
@@ -1,7 +1,4 @@
 {% extends 'base.html.twig' %}
-
-{#{% block title %}password reset{% endblock %}#}
-
 {% block body %}
     {% include 'navbar.html.twig' %}
     <div class="container" style="margin-top: 5%" >
@@ -24,7 +21,7 @@
         <label for="CurrentPassword">{% trans into language %}Password{% endtrans %}</label>
         <input type="password" name="CurrentPassword" id="CurrentPassword" class="form-control" autocomplete="current-password" required>
 
-        <label for="newPassword"{% trans into language %}>newPassword{% endtrans %}</label>
+        <label for="newPassword">{% trans into language %}newPassword{% endtrans %}</label>
         <input type="password" name="newPassword" id="newPassword" class="form-control" autocomplete="current-password" required>
 
 
